# alpaca-trading-shortcut

./: .gcloudignore  .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  sample.env
alpacaInterfacer/: __init__.py  accountHandler.py  alpacaBase.py  assetHandler.py  orderHandler.py  positionHandler.py
alpacaLogger/: gcpLogger.py
notebooks/: alpaca_interfacer.ipynb  main_loop_test.ipynb
scripts/: deploy.sh  generate_requirements.sh
tests/: test_alpaceInterfacer.py  test_main.py
