[tool.poetry]
name = "alpaca-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
alpaca-py = "^0.40.1"
python-dotenv = "^1.1.0"
functions-framework = "^3.8.3"
google-cloud-logging = "^3.12.1"
flask = "^3.1.1"
werkzeug = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pytest = "^7.4.3"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"