[project]
name = "alpaca-trading-shortcut"
version = "1.1.0"
description = "A shortcut for Alpaca trading operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.2",
    "flask>=3.1.2",
    "functions-framework>=3.10.0",
    "google-cloud-logging>=3.12.1",
    "python-dotenv>=1.2.1",
    "urllib3>=2.6.0",
    "werkzeug>=3.1.4",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
]
